syntax = "proto3";

package questions;

service QuestionService {
    rpc GetQuestions (Empty) returns (QuestionList);

    rpc GetUniqueQuestionTypes (Empty) returns (TypeList);
}

message Empty {}

message Question {
    string title = 1;
    string type = 2;
}

message QuestionList {
    repeated Question questions = 1;
}

message TypeList {
    repeated string types = 1;
}
